<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image"
        tools:context=".RegisterFragment">

        <LinearLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/include"
                layout="@layout/toolbar"

                />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/newAccText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/create_new_account"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_bg"
            android:drawableStart="@drawable/icon_user"
            android:drawablePadding="8dp"
            android:elevation="4dp"
            android:fontFamily="@font/opensans_semibold"
            android:hint="@string/name"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newAccText"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_bg"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="8dp"
            android:elevation="4dp"
            android:fontFamily="@font/opensans_semibold"
            android:hint="@string/email"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Name"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_bg"
            android:elevation="4dp"
            app:boxBackgroundColor="#FFF"
            app:boxStrokeColor="#FFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:passwordToggleEnabled="true"
            tools:background="#00000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bg"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="8dp"
                android:fontFamily="@font/opensans_semibold"
                android:hint="@string/password"
                android:maxLength="25"
                android:paddingStart="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_bg"
            android:elevation="4dp"
            app:boxBackgroundColor="#FFF"
            app:boxStrokeColor="#FFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passLayout"
            app:passwordToggleEnabled="true"
            tools:background="#00000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bg"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="8dp"
                android:fontFamily="@font/opensans_semibold"
                android:hint="@string/confirmPass"
                android:maxLength="14"
                android:paddingStart="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:buttonTint="@color/custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.258"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passConfirm" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TermsAndCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_semibold"
            android:paddingVertical="5dp"
            android:text="@string/terms_and_condition"
            android:textColor="@color/custom"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/passConfirm" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_bg"
            android:elevation="4dp"
            android:fontFamily="@font/opensans_semibold"
            android:paddingVertical="12dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/offWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signUpGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_bg"
            android:drawableStart="@drawable/icons_google"
            android:drawablePadding="8dp"
            android:elevation="4dp"
            android:fontFamily="@font/opensans_semibold"
            android:paddingStart="75dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/sign_up_with_google"
            android:textColor="@color/offWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerButton"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/already_have_a_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpGoogle"


            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginPageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/login_redirect"
            android:textColor="@color/custom"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registerTxt"
            app:layout_constraintTop_toBottomOf="@id/signUpGoogle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>