<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image"
        tools:context=".MainActivity">


        <LinearLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/include"
                layout="@layout/toolbar"

                />
        </LinearLayout>
        <!--    <ImageView-->
        <!--        android:id="@+id/loginImage"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        android:contentDescription="Login Image"-->
        <!--        app:layout_constraintTop_toBottomOf="@id/toolbarLayout"-->
        <!--        app:layout_constraintBottom_toTopOf="@id/loginText"-->
        <!--        android:src="@drawable/login_image"-->
        <!--        />-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/opensans"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_bg"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="8dp"
            android:elevation="4dp"
            android:fontFamily="@font/opensans_semibold"
            android:hint="@string/email"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginText"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_bg"
            android:elevation="4dp"
            app:boxBackgroundColor="#FFF"
            app:boxStrokeColor="#FFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:passwordToggleEnabled="true"
            tools:background="#00000000">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:background="@drawable/round_bg"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="8dp"
                android:fontFamily="@font/opensans_semibold"
                android:hint="@string/password"
                android:inputType="text"
                android:paddingStart="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            android:checked="true"
            app:buttonTint="@color/custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passLayout" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/checkBoxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/opensans_semibold"
            android:paddingVertical="2dp"
            android:text="@string/remember_me"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/passLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:drawableEnd="@drawable/icon_password_new"
            android:fontFamily="@font/opensans_semibold"
            android:paddingVertical="2dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_bg"
            android:elevation="4dp"
            android:fontFamily="@font/opensans_semibold"
            android:paddingVertical="12dp"
            android:text="@string/log_in"
            android:textColor="@color/offWhite"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/createTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:paddingVertical="8dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/create_an_account"
            android:textColor="@color/custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"

            />
        <!--        <androidx.fragment.app.FragmentContainerView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            tools:layout="@layout/fragment_register"-->
        <!--            android:id="@+id/fragmentContainer"/>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>